# rusty-recommends

./: Cargo.toml  README.md
src/: main.rs  recommendations.rs  seed.rs
src/lib/: mod.rs  recommendation.json  search-tracks.json
src/test-data/: search-tracks.json
