[package]
name = "rusty-recomends"
version = "0.1.0"
authors = ["baltol <smith@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9"}
tokio = { version = "0.2", features = ["full"] }
